# VectorBrain

./: .env.example  .gitignore  AGENT.md  PROGRESS.md  README.md  docker-compose.yml  manage.sh
.AGENT/rules/: coding-conventions.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_19_0001_initial_schema.py  2026_06_21_0002_chat_messages.py  2026_06_22_0003_chat_sessions.py  2026_06_22_0004_quiz_tables.py  2026_06_22_0005_summaries.py
backend/app/: main.py
backend/app/api/: chat.py  chat_history.py  documents.py  quiz.py  summaries.py
backend/app/core/: config.py
backend/app/db/: base.py  models.py
backend/app/models/: chat.py  documents.py  quiz.py  summary.py
backend/app/services/: chat.py  chunking.py  embeddings.py  generation.py  ingestion.py  parsing.py  prompting.py  quiz.py  retrieval.py  storage.py  summaries.py
backend/eval/: EVALUATION.md  golden.jsonl  golden_phonebook.jsonl  results.json  results_3fixes.json  results_filtered.json  results_final.json  results_k10.json  run_eval.py
backend/tests/: conftest.py  test_api.py  test_boilerplate_filter.py  test_embedding_dim.py  test_services.py
docs/: 01-product-overview.md  02-architecture.md  03-database-schema.md  04-backend-api-spec.md  05-rag-pipeline-spec.md  06-frontend-spec.md  07-testing-deployment.md  08-gpu-and-ocr-plan.md
docs/superpowers/specs/: 2026-06-21-session-memory-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: client.js
frontend/src/components/: ChatInterface.vue  CitationChip.vue  DocumentCard.vue  DocumentManager.vue  FileUploader.vue  MessageBubble.vue  QuizPanel.vue  SessionSidebar.vue  SummaryPanel.vue
frontend/src/stores/: chat.js  documents.js  sessions.js
frontend/src/utils/: citations.js
